pokemon-showdown-client/play.pokemonshowdown.com/style/oldclient.css
/* ... */
.ps-popup {
	position: absolute;
	top: auto; right: auto; left: auto; bottom: auto;
	text-align: left;
	background: #E1E8E8;
	color: black;
	border: 1px solid #999999;
	padding: 2px 10px;

	border-radius: 6px;
	box-shadow: inset 1px 1px 0 #ffffff, inset -1px -1px 0 #DDDDDD, 2px 2px 3px rgba(0,0,0,.2);
	z-index: 20;
}
.ps-overlay .ps-popup {
	position: static;
	margin: 80px auto 20px auto;
	max-width: 320px;
}
.ps-popup p {
	margin: 4px 0;
}
.ps-popup h3 {
	margin: 7px 0;
}
.ps-popup h3 {
	font-size: 12pt;
}
p.or {
	font-size: 12pt;
	font-style: italic;
	font-weight: bold;
	color: #444444;
	margin: 20px 0;
	text-align: center;
}
p.or:before,
p.or:after {
	content: "";
	font-size: 10px;
	padding: 0 0 0 85px;
	margin: 0 9px 0 0;
	border-bottom: 1px solid #777777;
	position: relative;
	top: -7px;
}
p.or:after {
	margin: 0 0 0 9px;
}
.ps-popup p.error {
	font-weight: bold;
	color: #EE4422;
}

.popupmenu {
	margin: -2px 0 -1px 0;
	padding: 0;
	list-style: none;
	font-size: 8pt;
}
.popupmenu h3 {
	margin: 5px 0 0 -2px;
	padding: 1px 0;
	font-size: 8pt;
	color: #579;
}
.popupmenu li:first-child h3 {
	margin-top: 0;
}
@media (max-height:590px) {
	.popupmenu h3 {
		margin-top: 2px;
	}
	.popupmenu, popupmenu li {
		margin: -3px 0 -2px 0;
	}
}
@media (max-height:518px) {
	.popupmenu h3 {
		margin-top: 1px;
	}
}

.popupmenu .option {
	width: 204px;
}
.popupmenu i {
	display: inline-block;
	width: 16px;
	color: #777777;
}
.popupmenu i.subtle {
	opacity: 0.25;
	filter: alpha(opacity=25);
}
.popupmenu i.subtle:hover {
	opacity: 1.0;
	filter: alpha(opacity=100);
}

.popupmenu .button {
	margin: 2px auto 5px;
	width: 184px;
}
.select, .team {
	width: 230px;
	min-height: 32px;
	height: auto;
	padding: 0 5px;
	font-size: 9pt;
	text-align: left;
	font-family: Verdana, Helvetica, Arial, sans-serif;
	cursor: pointer;

	border-radius: 4px;
	color: black;
	box-sizing: border-box;
}
.team:focus {
	outline: 0 none;
	border: 1px solid #004488;
	box-shadow: inset 0px 1px 2px #D2D2D2, 0px 0px 5px #2266AA;
}
.team.teamselect {
	padding-right: 15px;
	padding-left: 0;
}
.team.teamselect small .picon {
	margin-right: -6px;
}
.teamselect:disabled strong {
	color: #444444;
}
.dark .teamselect:disabled strong {
	color: #c7c7c7;
}
.team.team-hover {
	border-color: #555555;
	background: #FFFFFF;
	background: linear-gradient(to bottom,  #dce4ec,  #c6d3e0);
}
.team:active {
	border-color: #777777;
	background: #DDDDDD;
	box-shadow: none;
	background: linear-gradient(to bottom,  #bbc4cd,  #e7edf2);
}
.dark .team.team-hover {
	border-color: #34373b;
	background: #FFFFFF;
	color: white;
	background: linear-gradient(to bottom, #8f98a1, #4a5057);
}
.dark .team:active {
	border-color: #34373b;
	box-shadow: none;
	background: linear-gradient(to bottom, #4a5057, #8f98a1);
}

/*********************************************************
 * Main menu
 *********************************************************/

.leftmenu {
	padding: 40px 0 0 0;
	width: 324px;
}
.rightmenu {
	position: absolute;
	top: 40px;
	right: 25px;
}
.activitymenu {
	position: absolute;
	left: 325px;
	top: 40px;
}
.mainmenu {
	padding: 0 0 51px 0;
}

.battleform {
	width: 230px;
	text-align: left;
	margin: 0 auto;
}
.battleform .buttonbar {
	text-align: center;
}

.mainmenuwrapper {
	position: relative;
	min-height: 100%;
}
.mainmenufooter {
	position: absolute;
	bottom: 15px;
	left: 20px;
	color: #BBBBBB;
	text-shadow: 0 0 3px black, 0 0 3px black, 0 0 3px black;
}
.mainmenufooter blockquote {
	margin: 0 0 1em 0;
	padding: 0;
}
.mainmenufooter small {
	font-size: 9pt;
}
.mainmenufooter small small {
	font-size: 8pt;
}
.mainmenufooter a, .mainmenufooter button {
	background: transparent;
	border: 0;
	padding: 0;
	text-shadow: 0 0 3px black, 0 0 3px black, 0 0 3px black;

	text-decoration: underline;
	color: #99BBEE;
}
.mainmenufooter a:hover, .mainmenufooter button:hover {
	text-decoration: underline;
	color: #CCDDFF;
}

.pmbox {
	width: 270px;
	margin: 0 auto;
	min-height: 2px;
}
.pm-window {
	margin: 0 -12px 12px -10px;
}
.tiny-layout .pm-window {
	margin: 0 0 12px 0;
}
.pm-window h3 {
	background: rgba(248,248,248,.8);
	color: #777777;
	margin: 0;
	padding: 2px 4px 2px 5px;
	font-size: 11pt;
	border: 1px solid #AAAAAA;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
	cursor: pointer;
}
.pm-window h3:hover {
	color: #333333;
}
.pm-window h3.pm-minimized {
	border-radius: 5px;
}
.pm-window h3.pm-notifying {
	border-color: #AA8866;
	background: #E3C3A3;
}
.dark .pm-window h3.pm-notifying {
	background: #417589;
	color: #BBBBBB;
}
.pm-window h3.pm-notifying:hover {
	border-color: #604020;
	background: #CFAF8F;
}
.dark .pm-window h3.pm-notifying:hover {
	background: #417589;
}
.pm-window h3 .closebutton,
.pm-window h3 .minimizebutton {
	float: right;
	margin: -2px -5px 0 0;
	width: 22px;
	height: 21px;
}
.pm-window h3 small {
	color: #888888;
	font-weight: normal;
	vertical-align: 1px;
}
.pm-log {
	min-height: 100px;
	max-height: 300px;
	background: rgba(242,247,250,.925);
	color: black;
	border: 1px solid #AAAAAA;
	border-top: 0;
	border-bottom: 0;

	overflow: auto;
	-webkit-overflow-scrolling: touch;
	word-wrap: break-word;
}
.pm-buttonbar {
	padding-bottom: 3px;
}
.pm-log-add {
	color: black;
	border: 1px solid #AAAAAA;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
	background: rgba(242,247,250,.85);
}
.pm-window.collapsed .pm-log,
.pm-window.collapsed .pm-log-add {
	display: none;
}
.pm-window.focused h3,
.pm-window.focused .pm-log,
.pm-window.focused .pm-log-add {
	border-color: #555555;
}
.pm-window.focused h3,
.pm-window.focused h3:hover {
	background: #f8f8f8;
	color: #222222;
}
.dark .pm-window h3 {
	background: rgba(50,50,50,.8);
	color: #AAA;
}
.dark .pm-window h3:hover {
	color: #CCC;
}
.dark .pm-window.focused h3,
.dark .pm-window.focused h3:hover {
	background: #222;
	color: #EEE;
}
.challenge {
	margin-top: -1px;
	background: #fcd2b3;
	border: 1px solid #f57b21;
	color: #682f05;
	padding: 1px 5px;
}
/* ... */

